[tool.poetry]
name = "gamepad-example"
description = "Setup your enviroment to use the wbr proto api with python"
version = "0.1.0"
authors = [
    "Wandelbots <info@wandelbots.com>",
    "Florian Jung <florian.jung@wandelbots.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
wandelbots-api-client = "24.1.34"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
isort = "^5.13.2"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120